[package]
name = "str0m_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = "*"
str0m = { git = "https://github.com/algesten/str0m", branch = "feature/dynamic-local-ip" }
sdp = { git = "https://github.com/algesten/str0m", branch = "feature/dynamic-local-ip" }
webrtc = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
axum = "0.6"
serde = { version = "*", features = ["derive"] }
systemstat = "*"
vpx-encode = "0.6.2"
